Don't consider cache field in hashCode/equals